# guicpp

./: CMakeLists.txt  README.md
examples/illustrations/factory/: CMakeLists.txt  factoryuser.h  main.cc
examples/illustrations/reference/: CMakeLists.txt  main.cc  refarg.h
examples/illustrations/simple/after_guicpp/: CMakeLists.txt  contact_list.cc  contact_list.h  message_sender.cc  message_sender.h  notifiers.cc  notifiers.h  notifiers_main.cc
examples/illustrations/simple/before_guicpp/: CMakeLists.txt  contact_list.cc  contact_list.h  message_sender.cc  message_sender.h  notifiers.cc  notifiers.h  notifiers_main.cc
examples/notifier/: CMakeLists.txt
examples/notifier/common/: notifier_port.h
examples/notifier/contact_list/: contact_list.cc  contact_list.h
examples/notifier/http_server/implementation/: server.cc
examples/notifier/http_server/public/: server.h
examples/notifier/messengers/: message_sender.cc  message_sender.h  notifiers.cc  notifiers.h
examples/notifier/notifier_frontend/: nfe_guicpp.cc  nfe_guicpp.h  nfe_main.cc  nfe_module.cc  nfe_module.h  nfe_request_handler.cc  nfe_request_handler.h  nfe_server.cc  nfe_server.h
examples/notifier/testdata/: contacts.csv
include/guicpp/: guicpp.h  guicpp_annotations.h  guicpp_at.h  guicpp_at.h.pump  guicpp_binder.h  guicpp_factory.h  guicpp_injector.h  guicpp_macros.h  guicpp_module.h  guicpp_provider.h  guicpp_singleton.h  guicpp_strings.h  guicpp_tools.h
include/guicpp/internal/: guicpp_builder.h  guicpp_create_helpers.h  guicpp_create_helpers.h.pump  guicpp_entries.h  guicpp_factory_helpers.h  guicpp_factory_helpers.h.pump  guicpp_factory_types.h  guicpp_inject_util.h  guicpp_local_context.h  guicpp_port.h  guicpp_provider_helpers.h  guicpp_provider_helpers.h.pump  guicpp_provider_types.h  guicpp_table.h  guicpp_types.h  guicpp_util.h
src/: guicpp_binder.cc  guicpp_inject_util.cc  guicpp_injector.cc  guicpp_local_context.cc  guicpp_singleton.cc  guicpp_table.cc  guicpp_table_nc.cc  guicpp_tools.cc
testing/: CMakeLists.txt
testing/include/: guicpp_test_helper.h  guicpp_test_modules.h
testing/src/: guicpp_main.cc  guicpp_test_helper.cc  guicpp_test_modules.cc
testing/test/: guicpp_binder_test.cc  guicpp_builder_death_test.cc  guicpp_builder_test.cc  guicpp_entries_test.cc  guicpp_factory_test.cc  guicpp_inject_util_test.cc  guicpp_injector_death_test.cc  guicpp_injector_test.cc  guicpp_local_context_test.cc  guicpp_macros_test.cc  guicpp_provider_test.cc  guicpp_singleton_test.cc  guicpp_strings_test.cc  guicpp_table_death_test.cc  guicpp_table_test.cc  guicpp_util_test.cc
